--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
     <groupId>com.yet.spring</groupId>
     <artifactId>com.yet.spring.core</artifactId>
     <version>1.0-SNAPSHOT</version>
-<properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <properties>
     <spring-ver>
         3.2.13.RELEASE
     </spring-ver>
@@ -35,6 +47,11 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-jdbc</artifactId>
         <version>${spring-ver}</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
     </dependency>
 </dependencies>
 </project>
